Update and rename BE188-Final_colors.ipynb to BE188-Final_.ipynb

--- a/BE188-Final_.ipynb
+++ b/BE188-Final_.ipynb
@@ -42,9 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = np.array(pd.read_csv('./MS_Initial_Data.csv', header=0))\n",
+    "X = np.array(pd.read_csv('./phosphorylation-data.csv', header=0))\n",
     "Y = np.array(pd.read_csv('./Ydata.csv', header=0))\n",
-    "treatments_axl = np.array(pd.read_csv('./MS_Initial_Data.csv', header=None))[0,2:]\n",
+    "treatments_axl = np.array(pd.read_csv('./phosphorylation-data.csv', header=None))[0,2:]\n",
     "treatments_cv = np.delete(treatments_axl,[3,7,8,9])\n",
     "\n",
     "peptide_phosphosite = X[:,0]\n",
